# SkyEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  EngineRoot.h.in  LICENSE  ProjectRoot.h.in  README.md  asset.json  vcpkg-configuration.json  vcpkg.json
builder/: CMakeLists.txt
builder/module/: BuilderModule.cpp
builder/prefab/: CMakeLists.txt
builder/prefab/src/: PrefabBuilder.cpp
builder/render/: CMakeLists.txt
builder/render/src/: ImageBuilder.cpp  MaterialBuilder.cpp  PrefabBuilder.cpp  ShaderBuilder.cpp  TechniqueBuilder.cpp
builder/shader/: CMakeLists.txt
builder/shader/src/: ShaderCompiler.cpp
editor/: CMakeLists.txt
editor/framework/: CMakeLists.txt
editor/framework/src/: AssetBrowserWidget.cpp  AssetEditorProxy.cpp  EditorCamera.cpp  ReflectedObjectWidget.cpp  SelectTool.cpp  ViewportWidget.cpp  WorldTreeView.cpp
editor/src/: main.cpp
editor/src/application/: EditorApplication.cpp
editor/src/dialog/: LevelDialog.cpp  LevelDialog.h  ProjectDialog.cpp  ProjectDialog.h
editor/src/dockwidget/: AssetWidget.cpp  DockManager.cpp  InspectorWidget.cpp  WorldWidget.cpp
editor/src/document/: Document.cpp  Level.cpp
editor/src/inspector/: ComponentInspector.cpp  InspectorBase.cpp  InspectorWidget.cpp  PropertyColorWidget.cpp  PropertyTransform.cpp  PropertyUtil.cpp  PropertyWidget.cpp
editor/src/viewport/: Viewport.cpp  ViewportWidget.cpp
editor/src/window/: ActionManager.cpp  ActionManager.h  CentralWidget.cpp  CentralWidget.h  Constants.h  MainWindow.cpp  MainWindow.h  ToolBar.cpp  ToolBar.h
engine/: CMakeLists.txt  SkyEngineModule.cpp
engine/animation/: CMakeLists.txt
engine/animation/test/: AnimationTest.cpp
engine/aurora/: CMakeLists.txt
engine/aurora/core/: CMakeLists.txt
engine/aurora/rhi/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/editor/framework/: CMakeLists.txt
engine/editor/src/: main.cpp
engine/framework/: CMakeLists.txt
engine/include/: SkyEngine.h  Viewport.h
engine/include/world/: World.h  (+3 more)
engine/navigation/: CMakeLists.txt
engine/physics/: CMakeLists.txt
engine/render/: CMakeLists.txt
engine/shader/: CMakeLists.txt  CacheLayout.md  ShaderModule.cpp
engine/src/: EngineReflect.cpp  ServiceManager.cpp  SkyEngine.cpp  Viewport.cpp
engine/test/: EngineRoot.h.in
framework/: CMakeLists.txt
framework/platform/: CMakeLists.txt
framework/src/: Application.cpp  PlatformImpl.cpp  PlatformImpl.h
launcher/: CMakeLists.txt
launcher/android/: .gitignore  build.gradle  gradle.properties  settings.gradle
launcher/common/: Command.cpp  Command.h
launcher/macos/: MacosLauncher.mm
launcher/windows/: Win32Launcher.cpp
plugins/: CMakeLists.txt  plugins.json
plugins/bullet/: BulletModule.cpp  CMakeLists.txt  plugin.json
plugins/compression/: CMakeLists.txt  plugin.json
plugins/console/: CMakeLists.txt  Module.cpp  plugin.json
plugins/editor/: EditorModule.cpp
plugins/freetype/: CMakeLists.txt  FreeTypeModule.cpp  plugin.json
plugins/guizmo/: CMakeLists.txt  ImGuizmoModule.cpp  plugin.json
plugins/pvs/: CMakeLists.txt  plugin.json
plugins/python/: CMakeLists.txt  PythonModule.cpp  plugin.json
plugins/recast/: CMakeLists.txt  RecastModule.cpp  plugin.json
plugins/terrain/: CMakeLists.txt  plugin.json
plugins/xr/: CMakeLists.txt  XRModule.cpp  plugin.json
render/: CMakeLists.txt  RenderModule.cpp
render/adaptor/: CMakeLists.txt
render/builder/: CMakeLists.txt
render/core/: CMakeLists.txt
render/imgui/: CMakeLists.txt
render/shader/: CMakeLists.txt  ShaderModule.cpp
render/src/: DevObjManager.cpp  DriverManager.cpp  GlobalDescriptorPool.cpp  MaterialDatabase.cpp  MaterialProxy.cpp  RHIManager.cpp  Render.cpp  RenderBufferPool.cpp  RenderCamera.cpp  RenderDefaultResource.cpp  RenderEncoder.cpp  RenderMaterialProxy.cpp  RenderMeshContainer.cpp  RenderMeshPrimitive.cpp  RenderPackage.cpp  RenderPipeline.cpp  RenderPipelineForward.cpp  RenderPrimitive.cpp  RenderQueue.cpp  RenderResourceGC.cpp  RenderResourceGroup.cpp  RenderScene.cpp  RenderTechnique.cpp  RenderView.cpp  RenderViewport.cpp  RenderWindow.cpp  Renderer.cpp  SceneView.cpp  StaticMesh.cpp
render2/: CMakeLists.txt  RenderModule.cpp
render2/adaptor/: CMakeLists.txt
render2/src/: RHI.cpp
runtime/framework/: CMakeLists.txt
runtime/plugins/: CMakeLists.txt
runtime/render/: CMakeLists.txt  RenderModule.cpp
sample/: CMakeLists.txt  SampleModule.cpp
sample/DXSampleBase/: CMakeLists.txt
sample/DrvTriangle/: CMakeLists.txt  TriangleModule.cpp
sample/FrameGraph/: CMakeLists.txt
sample/MemoryAliasing/: CMakeLists.txt
sample/MetalSampleBase/: CMakeLists.txt
sample/RDSceneProject/: .gitignore  CMakeLists.txt  EngineRoot.h.in  ProjectRoot.h.in  assets.txt  engine_assets  package.repo
sample/RDSceneSample/: CMakeLists.txt
sample/RDTriangle/: CMakeLists.txt  TriangleModule.cpp
sample/RHISampleBase/: CMakeLists.txt  ProjectRoot.h.in
sample/Triangle/: CMakeLists.txt
sample/VulkanAsyncUpload/: CMakeLists.txt
sample/VulkanBindless/: CMakeLists.txt
sample/VulkanDescriptor/: CMakeLists.txt
sample/VulkanMemory/: CMakeLists.txt
sample/VulkanMemoryAliasing/: CMakeLists.txt
sample/VulkanMultiView/: CMakeLists.txt
sample/VulkanSampleBase/: CMakeLists.txt
sample/VulkanTriangle/: CMakeLists.txt
sample/include/: Sample.h
sample/src/: Sample.cpp
sample/vulkan/: CMakeLists.txt  main.cpp
vulkan/: CMakeLists.txt
vulkan/src/: AsyncTransferQueue.cpp  Buffer.cpp  BufferView.cpp  CommandBuffer.cpp  CommandPool.cpp  ComputePipeline.cpp  Conversion.cpp  Decode.cpp  DescriptorSet.cpp  DescriptorSetBinder.cpp  DescriptorSetLayout.cpp  DescriptorSetPool.cpp  Device.cpp  Driver.cpp  Fence.cpp  FrameBuffer.cpp  GraphicsPipeline.cpp  Image.cpp  ImageView.cpp  Instance.cpp  Memory.cpp  MemoryPool.cpp  PipelineLayout.cpp  PushConstants.cpp  QueryPool.cpp  Queue.cpp  RenderPass.cpp  Sampler.cpp  Semaphore.cpp  Shader.cpp  ShaderOption.cpp  SparseImage.cpp  StreamingPool.cpp  Swapchain.cpp  TransientPool.cpp  Util.cpp  VMAImpl.cpp  VertexAssembly.cpp  VertexInput.cpp
(+3722 files in other folders)
